# illuminate

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  WORKSPACE  illuminate  scripts.sh  sonar-project.properties  vscode.code-workspace
include/: routine.h  scheduler.h  visualizer.h
lib/phased_loop/: phased_loop.cc
scripts/linting/: check_format.sh  format.sh  format_cc_file.sh
src/: base64_tools.cc  base64_tools.h  constants.py  dynamic_routines.py  editor.py  frame_filter.py  illuminate.py  led_panel.py  led_panel_simulator.py  library.py  main.cc  messages.proto  messages_pb2.py  phased_loop.cc  phased_loop.h  player.py  process_manager.py  profile.prof  routine.h  scheduler.cc  setup.py  transitions.py  util.py  util_cython.pyx  visualizer.h
src/client/: client.cc  client.h
src/display/: BUILD  client.cc  display.cc  display.h  display_main.cc
src/display/client/: BUILD  client.cc  client.h
src/display/routines/: BUILD  fade_routine.h  line_highlight_routine.h  movie_theater_routine.h  noise_routine.h  outline_routine.h  programmed_routine.h  routine.h  tdx_routine.h
src/display/visualizer/: BUILD  led_strip.cc  led_strip.h  simulator.cc  simulator.h  stdout_visual.cc  stdout_visual.h  visualizer.h
src/editor/: editor.py
src/generators/layouts/: layout.csv  (+1 more)
src/python/: constants.py  dynamic_routines.py  gen_proto.sh  illuminate.py  led_panel.py  led_panel_simulator.py  library.py  messages.proto  util.py
src/routines/: fade_routine.h  line_highlight_routine.h  movie_theater_routine.h  outline_routine.h  programmed_routine.h  routine.h  tdx_routine.h
src/scheduler/: scheduler.cc  scheduler.h
src/server/: server.py
src/util/: base64_tools.cc  base64_tools.h  phased_loop.cc  phased_loop.h
src/visualizer/: led_strip.h  simulator.h  visualizer.h
tools/: bazel.rc
tools/build_rules/: select.bzl
tools/cpp/: CROSSTOOL
tools/scripts/: illuminate.py  install.sh  nuke.sh
(+26 files in other folders)
